✨ 관심사 taxonomy와 사용자 컨텍스트를 Agent에 동기화